fixes #10: The roster CSS no longer causes the scrollbar to always appear

--- a/src/styles/roster.less
+++ b/src/styles/roster.less
@@ -1,10 +1,5 @@
 @import "common.less";
 
-html, body {
-	width: 100%;
-	height: 100%;
-}
-
 .sign-in-prompt {
 	width: 100%;
 	height: 100%;
@@ -12,7 +7,12 @@ html, body {
 	text-align: center;
 
 	> div {
-		.vertical-center;
+		position: absolute;
+
+		top: 50%;
+		left: 50%;
+
+		transform: translateX(-50%) translateY(-50%);
 	}
 }
 
